# SearchingMinimus

./: .gitignore  README.md  Report.odt
SearchingForMinimums/: Algorithm.cpp  Algorithm.h  AlgorithmTest.cpp  AlgorithmTest.h  CMakeLists.txt  Function.cpp  Function.h  FunctionTest.cpp  FunctionTest.h  Gradient.cpp  Gradient.h  Makefile  Minimum.cpp  Minimum.h  MinimumsList.cpp  MinimumsList.h  Point.cpp  Point.h  TestPoint.cpp  TestPoint.h  VectorN.cpp  VectorN.h  gradient.h  main.cpp  wywolania.sh
SearchingForMinimums/fparser4.5.2/examples/: example.cc  test
